--- a/client/src/AppQueries.css
+++ b/client/src/AppQueries.css
@@ -15,12 +15,12 @@
     }
 
     .cards-container {
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(3, auto);
         grid-template-columns: 1fr;
     }
 
     .cards {
-        min-width: fit-content;
+        max-width: none;
 
         h3 {
             min-height: 0;
@@ -35,7 +35,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100%;
+        
         max-width: 30vw;
         overflow: hidden;
         border-radius: 10px;
@@ -43,7 +43,7 @@
     }
 
     .main-pictures img {
-
+        
         height: 580px;
         max-height: none;
 
