--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,10 +30,11 @@
 }
 
 /************************* NAVBAR *************************/
-.hamburguer{
+.hamburguer {
   display: none;
 }
-.mobile-menu{
+
+.mobile-menu {
   display: none;
 }
 
@@ -90,8 +91,13 @@ dialog {
 }
 
 @keyframes slideIn {
-  from { transform: translateX(100%); }
-  to { transform: translateX(0); }
+  from {
+    transform: translateX(100%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
 }
 
 .dialog-container {
@@ -475,7 +481,7 @@ footer {
 .create-post-form-container input,
 select,
 textarea {
-    font-family: "Lexend", sans-serif;
+  font-family: "Lexend", sans-serif;
   gap: 30px;
   padding: 12px;
   border: none var(--ChampagnePink);
@@ -547,51 +553,53 @@ select {
 
 /************************** ADOPTIONFORM **************************/
 
-.FormAdopt {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
 
 .adoption-main {
-  padding: 3rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .adoption-form-section {
-  padding: 3rem;
-  border-bottom: solid 1px var(--Melon);
+
+padding: 2rem;
+width: 100%;
+box-sizing: border-box;
 
 }
 
 .informationAdoption {
   background-color: var(--Seashell);
   box-sizing: border-box;
-  padding: 2rem;
+  padding: 4rem 2rem 4rem 2rem;
+  width: 100%;
 }
 
 .informationAdoption h1 {
   text-align: center;
+  margin: 0 0 1rem 0;
 }
 
 .knowledge {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
   gap: 3rem;
-  flex-wrap: wrap;
   padding-top: 2rem;
+  justify-content: center;
 }
 
 .Infor {
   max-width: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
+  row-gap: 0;
+  text-align:center;
+
+  h5{
+    margin: 0;
+    font-weight: 400;
+  }
 }
 
 .circle {
@@ -603,15 +611,17 @@ select {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: auto;
   font-weight: bold;
   font-size: 20px;
-  margin-bottom: 1rem;
+
 }
 
 .sub {
-  margin: 0;
-  margin-bottom: 2rem;
-  place-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   font-size: 40px;
 }
 
@@ -625,11 +635,13 @@ select {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 16px;
+  padding: 2rem;
+  box-sizing: border-box;
+
 }
 
 .form-grid select {
   padding: 10px;
-  font-size: 16px;
   border: 1px solid 555;
   border-radius: 8px;
   outline: none;
@@ -643,7 +655,7 @@ select {
   padding: 12px;
   border: none var(--ChampagnePink);
   border-radius: 10px;
-  font-size: 14px;
+  font-family: Lexend;
 
 }
 
@@ -663,38 +675,49 @@ select {
 
 .carousel-container {
   overflow: hidden;
-  width: 100%;
   max-width: 900px;
-  margin: auto;
   background-color: var(--Seashell);
-  padding-bottom: 10px;
   border-radius: 10px;
+  margin: auto;
+
+
 }
 
 .slides-wrapper {
   display: flex;
   transition: transform 0.4s ease-in-out;
-  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  gap: 0;
+
 }
 
 .slideAdoption {
   width: 100%;
   flex-shrink: 0;
-  padding: 20px;
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 0;
+
 }
 
-.carousel-controls {
+.submit-form {
+  padding: 2rem;
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  flex-direction: column;
+  gap: 10px;
 }
+
 
 .carousel-dots {
   display: flex;
   justify-content: center;
   gap: 10px;
   margin-top: 20px;
+  padding: 2rem;
+  width: min-content;
+  margin: auto;
 }
 
 .carousel-dots .dot {
@@ -809,39 +832,18 @@ select {
   font-size: 15px;
 }
 
-.submit-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-
-.btnA {
-  display: flex;
-  justify-content: flex-end;
-}
 
 
 
-.submit-button {
-  padding: 10px 20px;
-  background-color: var(--Melon);
-  color: black;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 20px;
-}
 
 /************************* STAFF *************************/
 .main-staff {
   display: flex;
   flex-direction: column;
   text-align: center;
- background: linear-gradient(135deg, var(--Seashell), var(--PaleDogwood));
+  background: linear-gradient(135deg, var(--Seashell), var(--PaleDogwood));
   gap: 1rem;
-  padding: 2rem;
-  padding-bottom: 2rem;
+  padding: 4rem 2rem 4rem 2rem;
   border-top: solid 1px var(--PaleDogwood);
   border-bottom: solid 1px var(--PaleDogwood);
 
@@ -851,7 +853,7 @@ select {
 
   h1 {
     font-size: 3rem;
-    margin-bottom: 0;
+    margin: 0;
   }
 
   h3 {
@@ -1049,10 +1051,12 @@ select {
 
 .main-voluntary>h2 {
   font-size: 2.5rem;
+  padding-inline: 2rem;
 }
 
 .voluntary-cards {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
   gap: 2rem;
   justify-content: center;
   padding-inline: 2rem;
