--- a/client/src/AppQueries.css
+++ b/client/src/AppQueries.css
@@ -147,6 +147,11 @@
         grid-template-rows: auto auto;
     }
 
+/************************* CREATE POST *************************/
+    .create-post-photo{
+        display: none;
+    }
+
 }
 
 /************************* SMALL *************************/
@@ -245,4 +250,21 @@
         width: 100%;
     }
 
+    /************************* CREATE POST  *************************/
+    .create-post-form-container{
+        padding: 2rem;
+        padding-inline: unset;
+    }
+    .create-post-main{
+        height: unset;
+    }
+    .information1, .information2{
+        flex-direction: column;
+        align-items: center;
+        input{
+            box-sizing: border-box;
+        }
+    
+    }
+    
 }
