--- a/client/src/App.css
+++ b/client/src/App.css
@@ -751,11 +751,11 @@ box-sizing: border-box;
 }
 
 .filtrer select {
-  padding: 8px 10px;
+  padding: 8px 15px;
   font-size: 15px;
   border: none;
   border-radius: 8px;
-  width: 100px;
+  max-width: 200px;
   cursor: pointer;
   font-family: "Lexend", sans-serif;
 }
