--- a/client/src/AppQueries.css
+++ b/client/src/AppQueries.css
@@ -266,5 +266,9 @@
         }
     
     }
+    /************************* ADOPT LIST  *************************/
+    .AdopListBody{
+        padding: 2rem;
+    }
     
 }
