--- a/client/src/App.css
+++ b/client/src/App.css
@@ -350,6 +350,7 @@ dialog {
   display: flex;
   flex-direction: column;
   font-size: 3rem;
+  margin-top: 0;
 }
 
 .info p {
@@ -481,10 +482,11 @@ textarea {
   gap: 30px;
   padding: 12px;
   border: none var(--ChampagnePink);
-  background-color: var(--Seashell);
+  background-color: #f1f1f1;
   border-radius: 10px;
   font-size: 14px;
   width: 100%;
+
 }
 
 
@@ -493,7 +495,7 @@ textarea {
   align-items: center;
   box-sizing: border-box;
   padding: 1rem;
-  background-color: var(--Seashell);
+  background-color: #f1f1f1;
   border-radius: 10px;
   cursor: pointer;
   max-width: 400px;
