--- a/src/App.css
+++ b/src/App.css
@@ -850,6 +850,46 @@ textarea {
   font-size: 15px;
 }
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  padding: 1rem 0;
+  list-style: none;
+     background: linear-gradient(135deg, var(--ChampagnePink), var(--Melon));
+}
+
+.page-item {
+  display: inline;
+}
+
+.page-link {
+  padding: 0.5rem 0.75rem;
+  border: 1px solid #ccc;
+  background: linear-gradient(135deg, var(--ChampagnePink), var(--Melon));
+  color: #333;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.page-link:hover {
+  background-color: var(--ChampagnePink);
+}
+
+.page-item.active .page-link {
+  background: linear-gradient(135deg, var(--ChampagnePink), var(--Melon));
+  color: white;
+  font-weight: bold;
+  border-color: #c20808;
+}
+
+.page-item.disabled .page-link {
+  background-color: #e9ecef;
+  color: #6c757d;
+  cursor: not-allowed;
+}
+
 
 /************************* STAFF *************************/
 .main-staff {
