--- a/src/App.css
+++ b/src/App.css
@@ -851,6 +851,7 @@ textarea {
 .cardInfo h3 {
   margin-bottom: 10px;
   color: hsl(from var(--Melon) h 80 70);
+  text-transform: capitalize;
 }
 
 .cardInfo p {
@@ -1230,6 +1231,10 @@ textarea {
   font-size: 1.8rem;
 }
 
+.card-link{
+display: block;
+}
+
 .ProfileSection {
   display: flex;
   gap: 25px;
@@ -1255,6 +1260,7 @@ textarea {
   display: flex;
   flex-direction: column;
   gap: .5rem;
+
 }
 
 .ProfileInfo .Info {
@@ -1262,6 +1268,7 @@ textarea {
   justify-content: space-between;
   gap: 1.5rem;
   margin-bottom: 10px;
+
 }
 
 .ProfileInfo .melon-button {
