--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
   --Seashell: #F8EDEB;
   --ChampagnePink: #F9DCC4;
   --Peach: #FEC89A;
+  --PrimaryText: #1f1f1f;
+  --SecondaryText: #5e5e5e;
   font-family: "Lexend", sans-serif;
-  color: rgb(31, 31, 31);
+  color: var(--PrimaryText);
 
   a {
-    color: rgb(31, 31, 31);
-    ;
+    color: var(--PrimaryText);
   }
 
 }
@@ -26,13 +27,8 @@
   font-weight: 700;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  color: rgb(31, 31, 31);
+  color: var(--PrimaryText);
   ;
-
-  a {
-    color: rgb(31, 31, 31);
-    ;
-  }
 
   &:hover {
     background-color: var(--ChampagnePink);
@@ -251,7 +247,6 @@ dialog {
 
 .slides h1 {
   font-size: clamp(2rem, 7vw, 4rem);
-  color: black;
   margin: auto;
 
   span {
@@ -342,7 +337,7 @@ dialog {
   }
 
   p {
-    color: #5f5f5f;
+    color: var(--SecondaryText)
   }
 }
 
@@ -538,7 +533,7 @@ textarea {
 .photo button {
   padding: 12px;
   background-color: var(--Melon);
-  color: black;
+  color: var(--PrimaryText);
   border: none;
   border-radius: 0 10px 10px 0;
   font-size: 18px;
@@ -790,10 +785,6 @@ textarea {
   gap: 2rem;
   margin: auto;
   width: 100%;
-
-
-
-
 }
 
 
@@ -820,6 +811,12 @@ textarea {
   &:hover::before {
     opacity: 1;
 
+  }
+  .melon-button{
+    background-color: var(--Melon);
+    margin: auto;
+    color: white;
+   
   }
 }
 
@@ -1335,12 +1332,6 @@ textarea {
 
 /*******************TABLESUPERUSER*************************/
 
-.cards-container1 {
-  max-width: 1200px;
-  margin: auto;
-  padding: 20px;
-}
-
 h2 {
   text-align: center;
   margin: 30px 0 10px;
@@ -1348,49 +1339,42 @@ h2 {
 
 .cards-wrapper {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 50px;
-  max-width: 1400px;
-  margin: 0 auto;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 300px));
+  gap: 1rem;
+  
 }
 
-.card1 {
+.card-request {
   width: 100%;
-  min-width: 0;
-  border: 1px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 2px 2px 8px #ddd;
-  background-color: #fff;
-  padding: 16px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1rem;
+  box-sizing: border-box;
 }
 
-.card-image {
+.card-title {
   display: flex;
   justify-content: center;
-  margin-bottom: 16px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
-.card-image img {
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
+
+.card-info > p{
+font-weight: bold;
+}
+.card-info > p span{
+  color: var(--SecondaryText);
+  font-weight: 400;
 }
 
-.card-info {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin-bottom: 16px;
-}
-
-.info-column {
-  flex: 1;
-  min-width: 150px;
-}
 
 .card-actions {
   display: flex;
