--- a/src/App.css
+++ b/src/App.css
@@ -1332,10 +1332,6 @@ textarea {
 
 /*******************TABLESUPERUSER*************************/
 
-h2 {
-  text-align: center;
-  margin: 30px 0 10px;
-}
 
 .cards-wrapper {
   display: grid;
@@ -1397,4 +1393,36 @@ font-weight: bold;
 
 .btn-reject {
   background-color: #ffd6d6;
+}
+
+/******************* 404 *************************/
+
+.notfound-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  text-align: center;
+
+  h1{
+    margin: 0;
+    font-size: 5rem;
+  }
+  h2{
+    margin: 0;
+  }
+
+
+}
+
+.notfound-container > div{
+
+  max-width: 404px;
+  width: 100%;
+
+}
+
+.notfound-container img{
+  width: 100%;
 }
