--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,7 @@ dialog {
   align-items: center;
   gap: .3rem;
   font-size: .8rem;
-  color: hsl(from var(--Melon) h 80 60);
+  color: color(srgb 0.92 0.381818 0.28);
 
 }
 
@@ -203,10 +203,12 @@ dialog {
 .indicators {
   position: absolute;
   bottom: 1rem;
-  width: 100%;
+  width: min-content;
   display: flex;
   justify-content: center;
   gap: 0.75rem;
+  left: 50%;
+  right: 50%;
 }
 
 .dot {
@@ -309,7 +311,7 @@ dialog {
   left: 0;
 }
 
-/************************* CARDS *************************/
+/************************* HOME CARDS *************************/
 
 
 .cards-container {
@@ -771,10 +773,11 @@ textarea {
   max-width: 200px;
   cursor: pointer;
   font-family: "Lexend", sans-serif;
+  color: var(--PrimaryText);
 }
 
 .filter option {
-  color: rgb(31, 31, 31);
+  color: var(--PrimaryText);
 }
 
 
@@ -795,7 +798,7 @@ textarea {
   position: relative;
   border-radius: 15px;
   cursor: pointer;
-  background-color: hsl(from var(--ChampagnePink) 400 s 90);
+  background-color: color(srgb 0.981538 0.927179 0.818461);
   overflow: hidden;
   padding: .5rem;
   width: 100%;
@@ -847,7 +850,7 @@ textarea {
 
 .cardInfo h3 {
   margin-bottom: 10px;
-  color: hsl(from var(--Melon) h 80 70);
+  color: color(srgb 0.94 0.536364 0.46);
   text-transform: capitalize;
 }
 
