--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,7 @@ dialog {
   margin-top: 15px;
   margin-right: -15px;
   cursor: pointer;
+  color: var(--PrimaryText);
 }
 
 .login-form {
@@ -203,17 +204,17 @@ dialog {
 .indicators {
   position: absolute;
   bottom: 1rem;
-  width: min-content;
+  width: 100%;
   display: flex;
   justify-content: center;
   gap: 0.75rem;
-  left: 50%;
-  right: 50%;
+
 }
 
 .dot {
   width: 12px;
   height: 12px;
+  aspect-ratio: 1;
   border-radius: 50%;
   border: none;
   background-color: rgba(255, 255, 255, 0.4);
@@ -798,7 +799,7 @@ textarea {
   position: relative;
   border-radius: 15px;
   cursor: pointer;
-  background-color: color(srgb 0.981538 0.927179 0.818461);
+  background-color: #FFFFFF;
   overflow: hidden;
   padding: .5rem;
   width: 100%;
