--- a/src/App.css
+++ b/src/App.css
@@ -1227,7 +1227,7 @@ textarea {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 2rem;
+  padding: 1rem;
   background: linear-gradient(135deg, var(--ChampagnePink), var(--PaleDogwood));
   border-top: 1px solid var(--Melon);
   border-bottom: 1px solid var(--Melon);
@@ -1250,6 +1250,11 @@ textarea {
 
 .my-posts h2 {
   font-size: 1.8rem;
+}
+
+.my-posts .card{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
 }
 
 .card-link {
